--- a/src/app/components/websitehome/websitehome.page.html
+++ b/src/app/components/websitehome/websitehome.page.html
@@ -589,8 +589,9 @@
 
 
                       </div>
-                      <div class="col-md-12 show-more-btn mx-auto text-center mt-5">
-                        <a class="btn-default" data-toggle="collapse" data-target="#non-veg">Show More</a>
+                      <div class="col-md-12 show-more-btn mx-auto text-center mt-5 cont-sec">
+                        <a class="bhagona-btn-2" data-toggle="collapse" data-target="#non-veg">Show More</a>
+                        <a class="bhagona-btn-2">continue </a>
                       </div>
                     </div>
                   </div>
@@ -953,8 +954,9 @@
                         </label>
                       </div>
                     </div>
-                    <div class="col-md-12 show-more-btn mx-auto text-center mt-5">
-                      <a class="btn-default" data-toggle="collapse" data-target="#veg">Show More</a>
+                    <div class="col-md-12 show-more-btn mx-auto text-center mt-5 cont-sec">
+                      <a class="bhagona-btn-2" data-toggle="collapse" data-target="#veg">Show More</a>
+                      <a class="bhagona-btn-2">continue </a>
                     </div>
                   </div>
 
@@ -991,10 +993,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="btn-default mt-2"><span><img
-                            src="https://venus-scocu-assets.s3.amazonaws.com/3885070672685172"
-                            style="width: 20px;"></span>
-                        Call</a>
+                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1017,10 +1016,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="btn-default mt-2"><span><img
-                            src="https://venus-scocu-assets.s3.amazonaws.com/3885070672685172"
-                            style="width: 20px;"></span>
-                        Call</a>
+                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1043,10 +1039,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="btn-default mt-2"><span><img
-                            src="https://venus-scocu-assets.s3.amazonaws.com/3885070672685172"
-                            style="width: 20px;"></span>
-                        Call</a>
+                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1069,10 +1062,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="btn-default mt-2"><span><img
-                            src="https://venus-scocu-assets.s3.amazonaws.com/3885070672685172"
-                            style="width: 20px;"></span>
-                        Call</a>
+                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1096,10 +1086,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="btn-default mt-2"><span><img
-                            src="https://venus-scocu-assets.s3.amazonaws.com/3885070672685172"
-                            style="width: 20px;"></span>
-                        Call</a>
+                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1122,10 +1109,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="btn-default mt-2"><span><img
-                            src="https://venus-scocu-assets.s3.amazonaws.com/3885070672685172"
-                            style="width: 20px;"></span>
-                        Call</a>
+                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1148,10 +1132,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="btn-default mt-2"><span><img
-                            src="https://venus-scocu-assets.s3.amazonaws.com/3885070672685172"
-                            style="width: 20px;"></span>
-                        Call</a>
+                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1174,10 +1155,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="btn-default mt-2"><span><img
-                            src="https://venus-scocu-assets.s3.amazonaws.com/3885070672685172"
-                            style="width: 20px;"></span>
-                        Call</a>
+                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1204,10 +1182,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="btn-default mt-2"><span><img
-                            src="https://venus-scocu-assets.s3.amazonaws.com/3885070672685172"
-                            style="width: 20px;"></span>
-                        Call</a>
+                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1230,10 +1205,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="btn-default mt-2"><span><img
-                            src="https://venus-scocu-assets.s3.amazonaws.com/3885070672685172"
-                            style="width: 20px;"></span>
-                        Call</a>
+                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1256,10 +1228,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="btn-default mt-2"><span><img
-                            src="https://venus-scocu-assets.s3.amazonaws.com/3885070672685172"
-                            style="width: 20px;"></span>
-                        Call</a>
+                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1282,10 +1251,7 @@
                     <div class="box-desc">
                       <h5>Executive Chef </h5>
                       <p>Oversees the entire kitchen, manages staff, and designs the menu.</p>
-                      <a href="#" class="btn-default mt-2"><span><img
-                            src="https://venus-scocu-assets.s3.amazonaws.com/3885070672685172"
-                            style="width: 20px;"></span>
-                        Call</a>
+                      <a href="#" class="Bhagona-Btn mt-2">2 Years Experience</a>
                     </div>
 
                   </div>
@@ -1296,8 +1262,11 @@
             
 
           </div>
-          <div class="col-md-12 show-more-btn mx-auto text-center mt-5"><a data-toggle="collapse" data-target="#cheff-data"
-              class="btn-default">Show More</a></div>
+          <div class="col-md-12 show-more-btn mx-auto text-center mt-5 cont-sec">
+            <a data-toggle="collapse" data-target="#cheff-data"
+              class="bhagona-btn-2">Show More</a>
+              <a class="bhagona-btn-2">continue </a>
+            </div>
 
         </div>
       </div>
@@ -1506,7 +1475,7 @@
           </div>
         </div>
         <div class="col-md-12 show-more-btn mx-auto text-center mt-5">
-          <a class="btn-default" data-toggle="collapse" data-target="#services">Show More</a>
+          <a class="bhagona-btn-2" data-toggle="collapse" data-target="#services">Show More</a>
         </div>
       </div>
 
@@ -1667,7 +1636,7 @@
 
                   <!-- Blog Item Button Start -->
                   <div class="blog-item-btn">
-                    <a href="blog-single.html" class="btn-default">read more</a>
+                    <a href="blog-single.html" class="bhagona-btn-2">read more</a>
                   </div>
                   <!-- Blog Item Button End -->
                 </div>
@@ -1701,7 +1670,7 @@
 
                   <!-- Blog Item Button Start -->
                   <div class="blog-item-btn">
-                    <a href="blog-single.html" class="btn-default">read more</a>
+                    <a href="blog-single.html" class="bhagona-btn-2">read more</a>
                   </div>
                   <!-- Blog Item Button End -->
                 </div>
@@ -1734,7 +1703,7 @@
 
                   <!-- Blog Item Button Start -->
                   <div class="blog-item-btn">
-                    <a href="blog-single.html" class="btn-default">read more</a>
+                    <a href="blog-single.html" class="bhagona-btn-2">read more</a>
                   </div>
                   <!-- Blog Item Button End -->
                 </div>
